--- a/views/layout.html
+++ b/views/layout.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
-
+    <script src="/jquery/jquery.min.js"></script>
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
     <title>TRIP PLANNER</title>
-
     <!-- Bootstrap core CSS -->
-   <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"> -->
-
+    <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Custom styles for this template -->
-    <!-- <link href="/stylesheets/style.css" rel="stylesheet"> -->
-
+    <link href="/stylesheets/stylesheet.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-
-
-      <!-- Begin page content -->
-      <div class="container">
+<body>
+    <!-- Begin page content -->
+    <div class="container">
         {% block content %}Welcome to TRIP PLANNER{% endblock %}
-      </div> <!-- end container -->
+    </div>
+    <!-- end container -->
+</body>
 
-
-  </body>
 </html>
